--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Anil Thapa Magar - COCO Plays</title>
     <link rel="stylesheet" href="/assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="shortcut icon" type="image/png" href="/img/fav.png">
+
 </head>
 
 <body>
@@ -15,8 +17,6 @@
                 <img src="/img/img.png" alt="">
             </div>
         </div>
-        <!-- <div class="icon arrow"><i class="fas fa-arrow-left"></i></div>
-        <div class="icon dots"><i class="fas fa-ellipsis-v"></i></div> -->
         <div class="name">Anil Thapa Magar</div>
         <div class="about">Gamer & Content Creator</div>
         <div class="social-icons">
