--- a/index.html
+++ b/index.html
@@ -1,55 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div>
+        <h1 class="header_text">Do you wanna go out with me?</h1>
+      </div>
+      <p>
+        <a href="https://www.instagram.com/untoldcoding/">@untoldcoding</a>
+      </p>
+      <div class="gif_container">
+        <img
+          src="https://i.postimg.cc/pdNqPxx1/milk-and-mocha-cute.gif"
+          alt="Cute animated illustration"
+        />
+      </div>
+      <div class="buttons">
+        <button class="btn" id="yesButton" onclick="nextPage()">Yes</button>
+        <button
+          class="btn"
+          id="noButton"
+          onmouseover="moveButton()"
+          onclick="moveButton()"
+        >
+          No
+        </button>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Anil Thapa Magar - COCO Plays</title>
-    <link rel="stylesheet" href="/assets/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="shortcut icon" type="image/png" href="/img/fav.png">
+        <script>
+          function nextPage() {
+            window.location.href = "yes.html";
+          }
 
-</head>
-
-<body>
-    <div class="wrapper">
-        <div class="img-area">
-            <div class="inner-area">
-                <img src="/img/img.png" alt="">
-            </div>
-        </div>
-        <div class="name">Anil Thapa Magar</div>
-        <div class="about">Gamer & Content Creator</div>
-        <div class="social-icons">
-            <a href="https://www.facebook.com/COCOPlaysGaming" target="_blank" class="fb"><i
-                    class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com/AnilThapa69" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com/anilthapa3412/" target="_blank" class="insta"><i
-                    class="fab fa-instagram"></i></a>
-            <a href="https://www.youtube.com/channel/UC8ofdhyJqa4zh3FQqKG80bg" target="_blank" class="yt"><i
-                    class="fab fa-youtube"></i></a>
-        </div>
-        <!-- <div class="buttons">
-            <button>
-                Message</button>
-            <button>Subscribe</button>
-        </div>
-        <div class="social-share">
-            <div class="row">
-                <i class="far fa-heart"></i>
-                <i class="icon-2 fas fa-heart"></i>
-                <span>20.4k</span>
-            </div>
-            <div class="row">
-                <i class="far fa-comment"></i>
-                <i class="icon-2 fas fa-comment"></i>
-                <span>14.3k</span>
-            </div>
-            <div class="row">
-                <i class="fas fa-share"></i>
-                <span>12.8k</span>
-            </div>
-        </div> -->
+          function moveButton() {
+            var x =
+              Math.random() *
+              (window.innerWidth -
+                document.getElementById("noButton").offsetWidth);
+            var y =
+              Math.random() *
+              (window.innerHeight -
+                document.getElementById("noButton").offsetHeight);
+            document.getElementById("noButton").style.left = `${x}px`;
+            document.getElementById("noButton").style.top = `${y}px`;
+          }
+        </script>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
