--- a/YES.HTML
+++ b/YES.HTML
@@ -15,7 +15,8 @@
         />
       </div>
       <button class="btn" id="yesButton" onclick="nextPage()">
-        Let's Fix a Date
+ <a href="https://www.instagram.com/anil_thapa321/">
+        Let's Fix a Date</a>
       </button>
     </div>
   </body>
