--- a/YES.HTML
+++ b/YES.HTML
@@ -14,8 +14,8 @@
           alt="Cute animated illustration"
         />
       </div>
-      <button class="btn" id="yesButton" onclick="nextPage()">
- <a href="https://www.instagram.com/anil_thapa321/">
+      <button>
+ <a  class="btn" id="yesButton" onclick="nextPage()" href="https://www.instagram.com/anil_thapa321/">
         Let's Fix a Date</a>
       </button>
     </div>
