--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1 class="header_text">Do you wanna go out with me?</h1>
       </div>
       <p>
-        <a href="https://www.instagram.com/anil_thapa321/">@anil_thapa321</a>
+        <a href="https://www.instagram.com/anilthapa3412/">@anilthapa3421</a>
       </p>
       <div class="gif_container">
         <img
